--- a/src/angular/src/app/pages/main/sidebar.component.scss
+++ b/src/angular/src/app/pages/main/sidebar.component.scss
@@ -18,11 +18,11 @@
         user-select: none;
 
         &:active {
-            background-color: $primary-color;
+            background-color: var(--app-selection-border);
         }
 
         &.selected {
-            background-color: $secondary-color;
+            background-color: var(--app-selection-bg);
             color: white;
             border-color: var(--app-accent-teal-border);
 
